weave-cloud/manifests/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: rook
---
apiVersion: v1
kind: Namespace
metadata:
  name: rook-system
