weave-cloud/manifests/postgresql.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: stolon-proxy-service
spec:
  type: LoadBalancer
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    stolon-proxy: "true"
    stolon-cluster: "kube-stolon"
