weave-cloud/manifests/frontend.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: frontend-service
  labels:
    service: frontend-service
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    service: frontend-service
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
        - "app.cosmos.foo"
      secretName: frontend-tls
  rules:
  - host: app.cosmos.foo
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend-service
          servicePort: 8080
---
kind: Deployment
apiVersion: apps/v1beta2
metadata:
  name: frontend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      service: frontend-service
  template:
    metadata:
      name: frontend-app
      labels:
        name: frontend-app
        service: frontend-service
    spec:
      containers:
      - image: jaegertracing/jaeger-agent
        name: jaeger-agent
        ports:
        - containerPort: 5775
          protocol: UDP
        - containerPort: 5778
        - containerPort: 6831
          protocol: UDP
        - containerPort: 6832
          protocol: UDP
        command:
        - "/go/bin/agent-linux"
        - "--collector.host-port=jaeger-collector:14267"
      - name: frontend-app
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        imagePullPolicy: Always
        image: chaosiq/demos-weave-cloud-frontend-app
        livenessProbe:
          httpGet:
            path: "/live"
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 10
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: "/health"
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 10
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 0.4
            memory: 64Mi
          requests:
            cpu: 0.2
            memory: 64Mi
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
